src/test/testFiles/invalid/semanticErrors/pushWithTwoArgs.manimdsl
let x = new Stack;
x.push(1, 2);